--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,7 +7,7 @@
                     <div class="flex justify-between mb-6">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%=  %></div>
+                                <div class="text-2xl font-semibold"><%= chart[0] %></div>
                             </div>
                             <div class="text-sm font-medium text-gray-400">Users</div>
                         </div>
@@ -19,7 +19,7 @@
                         <div>
                             <div class="flex items-center mb-1">
                                 <div class="text-2xl font-semibold"><%= chart[1] %></div>
-                                <div class="p-1 rounded bg-emerald-500/10 text-emerald-500 text-[12px] font-semibold leading-none ml-2">+30%</div>
+                                <!-- <div class="p-1 rounded bg-emerald-500/10 text-emerald-500 text-[12px] font-semibold leading-none ml-2">+30%</div> -->
                             </div>
                             <div class="text-sm font-medium text-gray-400">Brands</div>
                         </div>
