--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -36,12 +36,12 @@
           </div>
     </div>
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-blue-100  dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-orange-200  dark:text-gray-400">
             <tr>
                 <th scope="col" class="p-4">
                  
                 </th>
-                <th scope="col" class="px-6 3">Name</th>
+                <th scope="col" class="px-6 3">Username</th>
                 <th scope="col" class="px-6 py-3">Total</th>
                 <th scope="col" class="px-6 py-3">Payment Method</th>
                 <th scope="col" class="px-6 py-3">Status</th>
@@ -55,7 +55,7 @@
                     
                 </td>
                 <td class="px-6 py-4">
-                    <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">USER
+                    <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.address.name %>
                        
                       </a>
                 </td>
